# project-polaris-simulation-personal

./: .gitattributes  .gitignore  CITATION.cff  README.md  setup.bash  workspace.repos
.github/workflows/: build_test.yml
comms/foxglove_bridge_pkg/: package.xml  setup.cfg  setup.py
comms/foxglove_bridge_pkg/launch/: launch_foxglove_bridge.py
comms/mavlink_bridge/: README.md  package.xml  setup.py
comms/mavlink_bridge/docs/: EXTERNAL_NAV_PLAN.md
comms/mavlink_bridge/launch/: mavlink_bridge.launch.py
comms/mavlink_bridge/mavlink_bridge/: mavlink_publisher.py  odom_mavlink.py  output_monitor.py  ros2_receiver.py
config_pkg/: package.xml  setup.py
config_pkg/config_pkg/: constants.py
config_pkg/launch/: manual_control.launch.py
docker/: Dockerfile  Dockerfile.laptop  README.md  build_laptop.sh  run.sh  run_laptop.sh
install/: local_setup.sh  setup.sh
install/mavlink_bridge/lib/mavlink_bridge/: mavlink_publisher  output_monitor  ros2_receiver
install/mavlink_bridge/share/mavlink_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/orca_bringup/share/orca_bringup/: package.bash  package.zsh
log/: latest_build
orca_base/: CMakeLists.txt  package.xml
orca_base/include/orca_base/: base_context.hpp
orca_base/src/: base_controller.cpp  odom_to_path_node.cpp
orca_bringup/: CMakeLists.txt  README.md  package.xml
orca_bringup/behavior_trees/: orca4_bt copy.xml  orca4_bt.xml
orca_bringup/cfg/: sim_launch.rviz  sub.parm
orca_bringup/launch/: bringup.py  navigation_launch.py  sim_launch.py
orca_bringup/missions/: beneath_the_ice_mission.csv  default_mission_origin.json  default_wgs84_mission.csv  straight_line_mission.csv
orca_bringup/params/: nav2_params copy.yaml  nav2_params.yaml  sim_orca_params.yaml
orca_bringup/scripts/: WSG84_mission_starter.py  auv.sh  current_vector_node.py  disarm.sh  export_tracking_bag_csv.py  load_wsg84_points_to_waypoints.py  mission_runner.py  nav2_ready_wait.py  odom_to_tf.py  pixhawk_ready_wait.py  rov.sh  simulate_distance_sensor.py
orca_description/: CMakeLists.txt
orca_description/hooks/: setup.dsv
orca_description/models/orca4/: model.sdf  model.sdf.in
orca_description/scripts/: generate_model.py
orca_description/worlds/: sand.world
orca_nav2/: CMakeLists.txt  goal_checker_3d_plugin.xml  orca_controllers_plugins.xml  package.xml  progress_checker_3d_plugin.xml  pure_pursuit_controller_3d_plugin.xml
orca_nav2/config/: nav2_autonomy.yaml
orca_nav2/include/orca_nav2/: is_path_valid_check.hpp  is_sharp_turn_check.hpp  param_macro.hpp  path_tracking_utils.hpp  sharp_turn_controller3D.hpp
orca_nav2/launch/: nav2_autonomy_launch.py
orca_nav2/src/: go_down_from_ice_action.cpp  go_up_to_ice_action.cpp  goal_checker_3d.cpp  is_close_to_ice.cpp  is_close_to_ice_check.cpp  is_gps_fix_good_check.cpp  is_ice_measurement_stop_check.cpp  is_long_enough_down_check.cpp  is_path_valid_check.cpp  is_sharp_turn_check.cpp  is_steep_slope_check.cpp  move_up_down_action.cpp  path_tracking_utils.cpp  progress_checker_3d.cpp  pure_pursuit_controller_3d.cpp  sharp_turn_controller3D.cpp  steep_descent_controller_3d.cpp  store_active_goal_action.cpp  straight_line_planner_3d.cpp
