cmake_minimum_required(VERSION 3.12.2)
project(orca_nav2)

if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 17)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake_auto REQUIRED)

# Just list the packages here. ament_auto_find_build_dependencies 
# will use this list + your package.xml to set up the include paths.
find_package(nav2_util REQUIRED)
find_package(nav2_core REQUIRED)
find_package(nav2_costmap_2d REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(angles REQUIRED)
find_package(behaviortree_cpp_v3 REQUIRED)

ament_auto_find_build_dependencies()

# Header-only path geometry for BT condition plugins (controllers duplicate helpers in-source).
add_library(orca_nav2_path_tracking_utils INTERFACE)
target_include_directories(orca_nav2_path_tracking_utils INTERFACE
  "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
  "$<INSTALL_INTERFACE:include/${PROJECT_NAME}>"
)
ament_target_dependencies(orca_nav2_path_tracking_utils INTERFACE geometry_msgs nav_msgs tf2 angles)

# --- Behaviour Tree plugins (one shared library per plugin so each exports BT_RegisterNodesFromPlugin) ---
set(_orca_nav2_bt_plugin_deps
  nav_msgs
  geometry_msgs
  tf2
  tf2_ros
  tf2_geometry_msgs
  angles
  behaviortree_cpp_v3
  nav2_behavior_tree
  nav2_util
)


# --- Is path valid check ---
ament_auto_add_library(is_path_valid_check SHARED src/is_path_valid_check.cpp)
target_include_directories(is_path_valid_check PRIVATE include)
ament_target_dependencies(is_path_valid_check ${_orca_nav2_bt_plugin_deps})
target_link_libraries(is_path_valid_check orca_nav2_path_tracking_utils)
target_compile_definitions(is_path_valid_check PRIVATE BT_PLUGIN_EXPORT)

# --- Is sharp turn check ---
ament_auto_add_library(is_sharp_turn_check SHARED src/is_sharp_turn_check.cpp)
target_include_directories(is_sharp_turn_check PRIVATE include)
ament_target_dependencies(is_sharp_turn_check ${_orca_nav2_bt_plugin_deps})
target_link_libraries(is_sharp_turn_check orca_nav2_path_tracking_utils)
target_compile_definitions(is_sharp_turn_check PRIVATE BT_PLUGIN_EXPORT)

# --- Is close to ice check ---
ament_auto_add_library(is_close_to_ice_check SHARED src/is_close_to_ice_check.cpp)
target_include_directories(is_close_to_ice_check PRIVATE include)
ament_target_dependencies(is_close_to_ice_check ${_orca_nav2_bt_plugin_deps} rclcpp std_msgs)
target_link_libraries(is_close_to_ice_check) # Can be deleted?!
target_compile_definitions(is_close_to_ice_check PRIVATE BT_PLUGIN_EXPORT)

# --- Is ice measurement check ---
ament_auto_add_library(is_ice_measurement_stop_check SHARED src/is_ice_measurement_stop_check.cpp)
target_include_directories(is_ice_measurement_stop_check PRIVATE include)
ament_target_dependencies(is_ice_measurement_stop_check ${_orca_nav2_bt_plugin_deps})
target_link_libraries(is_ice_measurement_stop_check) # Can be deleted?!
target_compile_definitions(is_ice_measurement_stop_check PRIVATE BT_PLUGIN_EXPORT)

# --- Is GPS fixed check ---
ament_auto_add_library(is_gps_fix_good_check SHARED src/is_gps_fix_good_check.cpp)
target_include_directories(is_gps_fix_good_check PRIVATE include)
ament_target_dependencies(is_gps_fix_good_check ${_orca_nav2_bt_plugin_deps} sensor_msgs)
target_link_libraries(is_gps_fix_good_check) # Can be deleted?!
target_compile_definitions(is_gps_fix_good_check PRIVATE BT_PLUGIN_EXPORT)

# --- Go Up/Down Ice Action ---
ament_auto_add_library(move_up_down_action SHARED src/move_up_down_action.cpp)
target_include_directories(move_up_down_action PRIVATE include)
ament_target_dependencies(move_up_down_action ${_orca_nav2_bt_plugin_deps})
target_link_libraries(move_up_down_action) # Can be deleted?!
target_compile_definitions(move_up_down_action PRIVATE BT_PLUGIN_EXPORT)


# --- Controller (both Nav2 controller plugins live in one shared library; see orca_controllers_plugins.xml)
ament_auto_add_library(pure_pursuit_controller_3d SHARED
  src/pure_pursuit_controller_3d.cpp
  src/sharp_turn_controller3D.cpp
)
target_include_directories(pure_pursuit_controller_3d PRIVATE include)
ament_target_dependencies(pure_pursuit_controller_3d
  angles nav2_util nav2_core nav2_costmap_2d rclcpp rclcpp_lifecycle tf2 tf2_ros tf2_geometry_msgs geometry_msgs std_msgs nav_msgs)
target_compile_definitions(pure_pursuit_controller_3d PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
pluginlib_export_plugin_description_file(nav2_core orca_controllers_plugins.xml)


# --- Planner ---
ament_auto_add_library(straight_line_planner_3d SHARED src/straight_line_planner_3d.cpp)
target_include_directories(straight_line_planner_3d PRIVATE include)
ament_target_dependencies(straight_line_planner_3d nav2_util nav2_core nav2_costmap_2d rclcpp nav_msgs pluginlib)
target_compile_definitions(straight_line_planner_3d PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
pluginlib_export_plugin_description_file(nav2_core straight_line_planner_3d_plugin.xml)

# --- Goal Checker ---
ament_auto_add_library(goal_checker_3d SHARED src/goal_checker_3d.cpp)
target_include_directories(goal_checker_3d PRIVATE include)
ament_target_dependencies(goal_checker_3d nav2_util nav2_core nav2_costmap_2d rclcpp angles pluginlib)
target_compile_definitions(goal_checker_3d PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
pluginlib_export_plugin_description_file(nav2_core goal_checker_3d_plugin.xml)

# --- Progress Checker ---
ament_auto_add_library(progress_checker_3d SHARED src/progress_checker_3d.cpp)
target_include_directories(progress_checker_3d PRIVATE include)
ament_target_dependencies(progress_checker_3d nav2_util nav2_core nav2_costmap_2d rclcpp pluginlib)
target_compile_definitions(progress_checker_3d PUBLIC "PLUGINLIB__DISABLE_BOOST_FUNCTIONS")
pluginlib_export_plugin_description_file(nav2_core progress_checker_3d_plugin.xml)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

install(
  FILES
  orca_controllers_plugins.xml
  straight_line_planner_3d_plugin.xml
  goal_checker_3d_plugin.xml
  progress_checker_3d_plugin.xml
  DESTINATION share/${PROJECT_NAME}
)

ament_auto_package(USE_SCOPED_HEADER_INSTALL_DIR)